add module endpoint
