# src/routes/index.ts
@@ -1,9 +1,10 @@
 import express from "express";
-import Box from "./box"
-import Run from "./box/controllers/run"
+import Box from "./box/index.js";
+import Modules from "./modules/index.js";
 
 const router = express.Router();
 
 router.use('/box', Box);
+router.use('/modules', Modules);
 
 export default router;
